<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_comment"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#ffffff">

            <Button
                android:id="@+id/back"
                android:layout_width="35sp"
                android:layout_height="20sp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:background="@drawable/back" />

            <TextView
                android:id="@+id/comment_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/back"
                android:text="@string/acc_management"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:text="@string/info_saving"
                android:textColor="#000000"
                android:textSize="18sp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginTop="50dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/my_account"
                app:border_color="#fff"
                app:border_width="2dp" />

            <EditText
                android:id="@+id/et_signature"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="150dp"
                android:background="@drawable/shape"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/signature"
                android:lines="1"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/new_signature"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_alter_nickname"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/alter_signature"
                android:textSize="15sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/gender"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_gender"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:background="@android:color/transparent"
                android:drawableEnd="@drawable/my_go_detail_arrow"
                android:hint="@string/men"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_birthday_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/birthday"
                android:textColor="#000000"
                android:textSize="18sp" />


            <Button
                android:id="@+id/btn_date"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:background="@android:color/transparent"
                android:drawableEnd="@drawable/my_go_detail_arrow"
                android:textSize="15sp" />

        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/shape1" />

        <RelativeLayout
            android:id="@+id/rt_middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_info_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/info_complete"
                android:textColor="#000000"
                android:textSize="18sp" />

        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp">

            <ImageView
                android:id="@+id/iv_mail"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:background="@drawable/email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/iv_mail"
                android:text="@string/link_mail"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_mail"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/email"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp">

            <ImageView
                android:id="@+id/iv_indentity"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:background="@drawable/my_mingpian" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/iv_indentity"
                android:text="@string/link_identity_card"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_identity"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="20dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/identity_card"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp">

            <ImageView
                android:id="@+id/iv_paying"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:background="@drawable/trade" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/iv_paying"
                android:text="@string/link_paying"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_paying"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/paying"
                android:textSize="15sp" />

        </RelativeLayout>




    </LinearLayout>
</ScrollView>
