<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_evaluate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#ffffff">

            <Button
                android:id="@+id/back"
                android:layout_width="35sp"
                android:layout_height="20sp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:background="@drawable/back" />

            <TextView
                android:id="@+id/evaluate_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@+id/back"
                android:text="@string/evaluate"
                android:layout_centerVertical="true"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/bt_submit_evaluate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="300dp"
                android:background="@android:color/transparent"
                android:text="@string/submit_evaluate"
                android:textSize="18sp" />
        </RelativeLayout>

        <RadioGroup
            android:id="@+id/radio_group1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:background="@drawable/shape_below"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rd_good_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/good_review"
                android:textSize="15sp"/>
            <RadioButton
                android:id="@+id/rd_assessment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/assessment"
                android:textSize="15sp"/>
            <RadioButton
                android:id="@+id/rd_bad_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/bad_review"
                android:textSize="15sp"/>

        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:gravity="start"
            android:hint="@string/evaluate_text"
            android:lines="6"
            android:textSize="15sp" />

        <Button
            android:id="@+id/bt_add_picture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/camera"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape1"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/bt_anonymity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"/>
            <TextView
                android:id="@+id/anonymity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anonymity"
                android:textSize="18sp"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/anonymity_text"
                android:layout_marginStart="70dp"/>
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape1"/>

        <TextView
            android:id="@+id/tv_parking_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:textSize="18sp"
            android:text="@string/tv_parking_comment" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">
            <TextView
                android:id="@+id/tv_co_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:text="@string/tv_co_location"/>

            <com.iarcuschin.simpleratingbar.SimpleRatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                app:srb_starSize="25dp"
                app:srb_numberOfStars="5"
                app:srb_rating="2.5"
                app:srb_stepSize="0.5"
                app:srb_borderColor="#212121"
                app:srb_fillColor="#212121" />





        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">
            <TextView
                android:id="@+id/tv_function"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:text="@string/tv_function"/>
            <com.iarcuschin.simpleratingbar.SimpleRatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                app:srb_starSize="25dp"
                app:srb_numberOfStars="5"
                app:srb_rating="2.5"
                app:srb_stepSize="0.5"
                app:srb_borderColor="#212121"
                app:srb_fillColor="#212121" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_co_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:text="@string/tv_co_service"/>
            <com.iarcuschin.simpleratingbar.SimpleRatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                app:srb_starSize="25dp"
                app:srb_numberOfStars="5"
                app:srb_rating="2.5"
                app:srb_stepSize="0.5"
                app:srb_borderColor="#212121"
                app:srb_fillColor="#212121" />

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
