<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/rl_evaluate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#ffffff">

        <Button
            android:id="@+id/back"
            android:layout_width="35sp"
            android:layout_height="20sp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@drawable/back" />

        <TextView
            android:id="@+id/evaluate_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@+id/back"
            android:text="@string/submit_success"
            android:textSize="20sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:hint="@string/check_comment_text"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/check_comment"
            android:background="@drawable/bt_shape"
            android:textSize="15sp"
            android:textColor="#2689ff" />

    </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
